@@ -198,6 +198,7 @@
 				<option value="-1" {if $filter.assignments eq '-1'} selected {/if}>{trans('without end date')}</option>
 				<option value="-2" {if $filter.assignments eq '-2'} selected {/if}>{trans('active')}</option>
 				<option value="-3" {if $filter.assignments eq '-3'} selected {/if}>{trans('active, with invoice')}</option>
+				<option value="-5" {if $filter.assignments eq '-5'} selected {/if}>{trans('active, with pro forma')}</option>
 				<option value="-4" {if $filter.assignments eq '-4'} selected {/if}>{trans('suspended')}</option>
 			</select>
 			</label>
