@@ -285,6 +285,7 @@
 				<option value="-1">{trans('without end date')}</option>
 				<option value="-2">{trans('active')}</option>
 				<option value="-3">{trans('active, with invoice')}</option>
+				<option value="-5">{trans('active, with pro forma')}</option>
 				<option value="-4">{trans('suspended')}</option>
 			</select>
 		</TD>
